fix: scrollbar and dot loader

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -23,7 +23,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    align-items: center;
+    border-radius: 50%;
+    margin-top: 5px;
   }
   
   .dot {
@@ -31,25 +33,26 @@
     height: 20px; 
     border-radius: 50%; 
     background-color: #2876BF; 
-    transition: opacity 3s ease; 
-    opacity: 0.5; 
+    transition: opacity 3s ease;
+    border: 3px solid #3A7BD5; 
+    opacity: 0.7s; 
   }
   
   .dot.active {
     opacity: 1; 
-    box-shadow: 0 0 20px #2876BF; 
+    box-shadow: 0 0 40px #2876BF; 
     animation: glow 6s infinite alternate; 
+    border: 2px solid #3A7BD5;
   }
   
   @keyframes glow {
     0% {
-      box-shadow: 0 0 10px #2876BF;
+      box-shadow: 0 0px 30px #2876BF;
     }
     50% {
-        box-shadow: 0 0 25px #2876BF;
-        border:1px solid #144471;
+        box-shadow: 0 0px 40px #2876BF;
     }
     100% {
-      box-shadow: 0 0 50px #2876BF;
+      box-shadow: 0 0px 50px #2876BF;
     }
   }
